tests/snapshots/test_from_file__afiro_ext.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: afiro_ext.mps
problem_sense: Minimize
variables:
  PBOSHNL0: General
  PBOSHNL1: General
  PBOSHNL7: General
  PBOSHNL8: General
  PBOSLAX0: General
  PBOSLAX1: General
  PBOSLAX7: General
  PBOSSEA0: General
  PBOSSEA1: General
  PBOSSEA2: General
  PBOSSFO0: General
  PBOSSFO1: General
  PBOSTPE1: General
  PBOSTPE2: General
  PBOSTYO1: General
  X01:
    Bounded:
      - 0
      - 1
      - false
  X02:
    UB: 1.2
  X03: General
  X04: General
  X06:
    LB: 3
  X07: General
  X08: General
  X09:
    LB: -inf
  X10: General
  X11: General
  X12: General
  X13: General
  X14: General
  X15: General
  X16: General
  X22: General
  X23: General
  X24: General
  X25: General
  X26: General
  X28: General
  X29: General
  X30: General
  X31: Integer
  X32: Integer
  X33: General
  X34: General
  X35: General
  X36: General
  X37: General
  X38: Binary
  X39: General
objectives:
  - name: OBJ1
    coefficients:
      - var_name: X02
        coefficient: -0.4
      - var_name: X14
        coefficient: -0.32
      - var_name: X23
        coefficient: -0.6
      - var_name: X36
        coefficient: -0.48
      - var_name: X39
        coefficient: 10
  - name: OBJ2
    coefficients:
      - var_name: X03
        coefficient: 1
      - var_name: X06
        coefficient: 2.5
      - var_name: X08
        coefficient: -5
  - name: OBJ3
    coefficients:
      - var_name: X03
        coefficient: -10.4
      - var_name: X07
        coefficient: -2.5
      - var_name: X10
        coefficient: 2.1
  - name: OBJECTIV
    coefficients:
      - var_name: PBOSHNL0
        coefficient: -0.23519
      - var_name: PBOSHNL1
        coefficient: -0.23519
      - var_name: PBOSHNL7
        coefficient: 0.02469
      - var_name: PBOSHNL8
        coefficient: 0.02665
      - var_name: PBOSLAX0
        coefficient: -0.13092
      - var_name: PBOSLAX1
        coefficient: -0.13092
      - var_name: PBOSLAX7
        coefficient: 0.03462
      - var_name: PBOSSEA0
        coefficient: -0.12596
      - var_name: PBOSSEA1
        coefficient: -0.12596
      - var_name: PBOSSEA2
        coefficient: -0.12596
      - var_name: PBOSSFO0
        coefficient: -0.13481
      - var_name: PBOSSFO1
        coefficient: -0.13481
      - var_name: PBOSTPE1
        coefficient: 0.05629
      - var_name: PBOSTPE2
        coefficient: 0.0528
      - var_name: PBOSTYO1
        coefficient: 0.04525
constraints:
  "R09:":
    Standard:
      name: "R09:"
      coefficients:
        - var_name: X01
          coefficient: -1
        - var_name: X02
          coefficient: 1
        - var_name: X03
          coefficient: 1
      sense: Equal
      rhs: 0
  "R10:":
    Standard:
      name: "R10:"
      coefficients:
        - var_name: X01
          coefficient: -1.06
        - var_name: X04
          coefficient: 1
      sense: Equal
      rhs: 0
  "R12:":
    Standard:
      name: "R12:"
      coefficients:
        - var_name: X06
          coefficient: -1
        - var_name: X07
          coefficient: -1
        - var_name: X08
          coefficient: -1
        - var_name: X09
          coefficient: -1
        - var_name: X14
          coefficient: 1
        - var_name: X15
          coefficient: 1
      sense: Equal
      rhs: 0
  "R13:":
    Standard:
      name: "R13:"
      coefficients:
        - var_name: X06
          coefficient: -1.06
        - var_name: X07
          coefficient: -1.06
        - var_name: X08
          coefficient: -0.96
        - var_name: X09
          coefficient: -0.86
        - var_name: X16
          coefficient: 1
      sense: Equal
      rhs: 0
  "R19:":
    Standard:
      name: "R19:"
      coefficients:
        - var_name: X22
          coefficient: -1
        - var_name: X23
          coefficient: 1
        - var_name: X24
          coefficient: 1
        - var_name: X25
          coefficient: 1
      sense: Equal
      rhs: 0
  "R20:":
    Standard:
      name: "R20:"
      coefficients:
        - var_name: X22
          coefficient: -0.43
        - var_name: X26
          coefficient: 1
      sense: Equal
      rhs: 0
  "R22:":
    Standard:
      name: "R22:"
      coefficients:
        - var_name: X28
          coefficient: -0.43
        - var_name: X29
          coefficient: -0.43
        - var_name: X30
          coefficient: -0.39
        - var_name: X31
          coefficient: -0.37
        - var_name: X38
          coefficient: 1
      sense: Equal
      rhs: 0
  "R23:":
    Standard:
      name: "R23:"
      coefficients:
        - var_name: X28
          coefficient: 1
        - var_name: X29
          coefficient: 1
        - var_name: X30
          coefficient: 1
        - var_name: X31
          coefficient: 1
        - var_name: X36
          coefficient: -1
        - var_name: X37
          coefficient: 1
        - var_name: X39
          coefficient: 1
      sense: Equal
      rhs: 44
  "X05:":
    Standard:
      name: "X05:"
      coefficients:
        - var_name: X01
          coefficient: 1
      sense: LessOrEqual
      rhs: 80
  "X17:":
    Standard:
      name: "X17:"
      coefficients:
        - var_name: X06
          coefficient: 1
        - var_name: X10
          coefficient: -1
      sense: LessOrEqual
      rhs: 80
  "X18:":
    Standard:
      name: "X18:"
      coefficients:
        - var_name: X07
          coefficient: 1
        - var_name: X11
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X19:":
    Standard:
      name: "X19:"
      coefficients:
        - var_name: X08
          coefficient: 1
        - var_name: X12
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X20:":
    Standard:
      name: "X20:"
      coefficients:
        - var_name: X09
          coefficient: 1
        - var_name: X13
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X21:":
    Standard:
      name: "X21:"
      coefficients:
        - var_name: X02
          coefficient: -1
        - var_name: X14
          coefficient: 1.4
      sense: LessOrEqual
      rhs: 0
  "X27:":
    Standard:
      name: "X27:"
      coefficients:
        - var_name: X22
          coefficient: 1
      sense: LessOrEqual
      rhs: 500
  "X40:":
    Standard:
      name: "X40:"
      coefficients:
        - var_name: X28
          coefficient: 1
        - var_name: X32
          coefficient: -1
      sense: LessOrEqual
      rhs: 500
  "X41:":
    Standard:
      name: "X41:"
      coefficients:
        - var_name: X29
          coefficient: 1
        - var_name: X33
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X42:":
    Standard:
      name: "X42:"
      coefficients:
        - var_name: X30
          coefficient: 1
        - var_name: X34
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X43:":
    Standard:
      name: "X43:"
      coefficients:
        - var_name: X31
          coefficient: 1
        - var_name: X35
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X44:":
    Standard:
      name: "X44:"
      coefficients:
        - var_name: X23
          coefficient: -1
        - var_name: X36
          coefficient: 1.4
      sense: LessOrEqual
      rhs: 0
  "X45:":
    Standard:
      name: "X45:"
      coefficients:
        - var_name: X10
          coefficient: 2.364
        - var_name: X11
          coefficient: 2.386
        - var_name: X12
          coefficient: 2.408
        - var_name: X13
          coefficient: 2.429
        - var_name: X25
          coefficient: -1
        - var_name: X32
          coefficient: 2.191
        - var_name: X33
          coefficient: 2.219
        - var_name: X34
          coefficient: 2.249
        - var_name: X35
          coefficient: 2.279
      sense: LessOrEqual
      rhs: 0
  "X46:":
    Standard:
      name: "X46:"
      coefficients:
        - var_name: X03
          coefficient: -1
        - var_name: X22
          coefficient: 0.109
      sense: LessOrEqual
      rhs: 0
  "X47:":
    Standard:
      name: "X47:"
      coefficients:
        - var_name: X15
          coefficient: -1
        - var_name: X28
          coefficient: 0.109
        - var_name: X29
          coefficient: 0.108
        - var_name: X30
          coefficient: 0.108
        - var_name: X31
          coefficient: 0.107
      sense: LessOrEqual
      rhs: 0
  "X48:":
    Standard:
      name: "X48:"
      coefficients:
        - var_name: X01
          coefficient: 0.301
        - var_name: X24
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X49:":
    Standard:
      name: "X49:"
      coefficients:
        - var_name: X06
          coefficient: 0.301
        - var_name: X07
          coefficient: 0.313
        - var_name: X08
          coefficient: 0.313
        - var_name: X09
          coefficient: 0.326
        - var_name: X37
          coefficient: -1
      sense: LessOrEqual
      rhs: 0
  "X50:":
    Standard:
      name: "X50:"
      coefficients:
        - var_name: X04
          coefficient: 1
        - var_name: X26
          coefficient: 1
      sense: LessOrEqual
      rhs: 310
  "X51:":
    Standard:
      name: "X51:"
      coefficients:
        - var_name: X16
          coefficient: 1
        - var_name: X38
          coefficient: 1
      sense: LessOrEqual
      rhs: 1300

