tests/snapshots/test_from_file__infile_comments.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ""
problem_sense: Minimize
variables:
  x1: Binary
  x2: Binary
  x3: Binary
  x4: Binary
  x5: Binary
  x6: Binary
  x7: Binary
objectives:
  - name: obj
    coefficients:
      - var_name: x1
        coefficient: 3
      - var_name: x2
        coefficient: 5
      - var_name: x3
        coefficient: 6
      - var_name: x4
        coefficient: 9
      - var_name: x5
        coefficient: 10
      - var_name: x6
        coefficient: 10
constraints:
  "c003:":
    Standard:
      name: "c003:"
      coefficients:
        - var_name: x1
          coefficient: 5
        - var_name: x2
          coefficient: -1
        - var_name: x3
          coefficient: 4
        - var_name: x4
          coefficient: -2
        - var_name: x5
          coefficient: 2
        - var_name: x6
          coefficient: -1
      sense: ">="
      rhs: 3

