tests/snapshots/test_from_file__infile_comments2.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints: {}
objectives:
  - coefficients:
      - coefficient: 3
        var_name: x1
      - coefficient: 5
        var_name: x2
      - coefficient: 6
        var_name: x3
      - coefficient: 9
        var_name: x4
      - coefficient: 10
        var_name: x5
      - coefficient: 10
        var_name: x6
    name: obj
problem_name: ~
problem_sense: Minimize
variables:
  x1: Binary
  x2: Binary
  x3: Binary
  x4: Binary
  x5: Binary
  x6: Binary
  x7: Binary
