tests/snapshots/test_from_file__mosek.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ~
problem_sense: Minimize
variables:
  Gen_001d01h01:
    Bounded:
      - 0
      - 1
      - false
  Gen_001d01h02:
    Bounded:
      - 0
      - inf
      - false
  Gen_001d01h03: General
  Gen_001d01h04: General
  Gen_001d01h05: General
  Gen_001d01h06: General
  Gen_001d01h07: General
  Gen_001d01h08: General
  Gen_001d01h09: General
  Gen_001d01h10: General
  Gen_001d01h11: General
  Gen_001d01h12: General
  Gen_001d01h13: General
  Gen_001d01h14: General
  Gen_001d01h15: General
  Gen_001d01h16: General
  Gen_001d01h17: General
  Gen_001d01h18: General
  Gen_001d01h19: General
  Gen_001d01h20: General
objectives:
  - name: system_cost
    coefficients:
      - var_name: Gen_001d01h01
        coefficient: 0.2
      - var_name: Gen_001d01h02
        coefficient: 0.2
      - var_name: Gen_001d01h03
        coefficient: 0.2
      - var_name: Gen_001d01h04
        coefficient: 0.2
      - var_name: Gen_001d01h05
        coefficient: 0.2
      - var_name: Gen_001d01h06
        coefficient: 0.2
      - var_name: Gen_001d01h07
        coefficient: 0.2
      - var_name: Gen_001d01h08
        coefficient: 0.2
      - var_name: Gen_001d01h09
        coefficient: 0.2
      - var_name: Gen_001d01h10
        coefficient: 0.2
      - var_name: Gen_001d01h11
        coefficient: 0.2
      - var_name: Gen_001d01h12
        coefficient: 0.2
      - var_name: Gen_001d01h13
        coefficient: 0.2
      - var_name: Gen_001d01h14
        coefficient: 0.2
      - var_name: Gen_001d01h15
        coefficient: 0.2
      - var_name: Gen_001d01h16
        coefficient: 0.2
      - var_name: Gen_001d01h17
        coefficient: 0.2
      - var_name: Gen_001d01h18
        coefficient: 0.2
      - var_name: Gen_001d01h19
        coefficient: 0.2
      - var_name: Gen_001d01h20
        coefficient: 0.2
constraints:
  "dummy_constraint:":
    Standard:
      name: "dummy_constraint:"
      coefficients:
        - var_name: Gen_001d01h01
          coefficient: 1
        - var_name: Gen_001d01h02
          coefficient: 1
      sense: "<="
      rhs: 1000
