tests/snapshots/test_from_file__output2_4.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "cons0:":
    Standard:
      name: "cons0:"
      coefficients:
        - coefficient: 1
          var_name: x0
        - coefficient: 1
          var_name: x1
      sense: "<="
      rhs: 21.1
  "cons10:":
    Standard:
      name: "cons10:"
      coefficients:
        - coefficient: -1
          var_name: x3
        - coefficient: 1
          var_name: x13
      sense: "<="
      rhs: 0
  "cons11:":
    Standard:
      name: "cons11:"
      coefficients:
        - coefficient: -1
          var_name: x5
        - coefficient: 1
          var_name: x14
      sense: "<="
      rhs: 0
  "cons12:":
    Standard:
      name: "cons12:"
      coefficients:
        - coefficient: -1
          var_name: x1
        - coefficient: 1
          var_name: x14
      sense: "<="
      rhs: 0
  "cons13:":
    Standard:
      name: "cons13:"
      coefficients:
        - coefficient: -1
          var_name: x3
        - coefficient: 1
          var_name: x14
      sense: "<="
      rhs: 0
  "cons14:":
    Standard:
      name: "cons14:"
      coefficients:
        - coefficient: -1
          var_name: x5
        - coefficient: 1
          var_name: x14
      sense: "<="
      rhs: 0
  "cons1:":
    Standard:
      name: "cons1:"
      coefficients:
        - coefficient: 1
          var_name: x2
        - coefficient: 1
          var_name: x3
      sense: "<="
      rhs: 22.2
  "cons2:":
    Standard:
      name: "cons2:"
      coefficients:
        - coefficient: 1
          var_name: x4
        - coefficient: 1
          var_name: x5
      sense: "<="
      rhs: 23.3
  "cons3:":
    Standard:
      name: "cons3:"
      coefficients:
        - coefficient: 1
          var_name: x6
      sense: "<="
      rhs: 11.1
  "cons4:":
    Standard:
      name: "cons4:"
      coefficients:
        - coefficient: -1.1
          var_name: x1
        - coefficient: 1
          var_name: x7
      sense: "<="
      rhs: 0
  "cons5:":
    Standard:
      name: "cons5:"
      coefficients:
        - coefficient: 1
          var_name: x8
      sense: "<="
      rhs: 12.2
  "cons6:":
    Standard:
      name: "cons6:"
      coefficients:
        - coefficient: -1.1
          var_name: x3
        - coefficient: 1
          var_name: x9
      sense: "<="
      rhs: 0
  "cons7:":
    Standard:
      name: "cons7:"
      coefficients:
        - coefficient: 1
          var_name: x10
      sense: "<="
      rhs: 13.3
  "cons8:":
    Standard:
      name: "cons8:"
      coefficients:
        - coefficient: -1.1
          var_name: x5
        - coefficient: 1
          var_name: x11
      sense: "<="
      rhs: 0
  "cons9:":
    Standard:
      name: "cons9:"
      coefficients:
        - coefficient: -1
          var_name: x1
        - coefficient: 1
          var_name: x12
      sense: "<="
      rhs: 0
objectives:
  - coefficients:
      - coefficient: 2.1
        var_name: x0
      - coefficient: 1000
        var_name: x1
      - coefficient: 2.2
        var_name: x2
      - coefficient: 1000
        var_name: x3
      - coefficient: 2.3
        var_name: x4
      - coefficient: 1000
        var_name: x5
      - coefficient: 1.1
        var_name: x6
      - coefficient: 1.2
        var_name: x7
      - coefficient: 1.3
        var_name: x8
      - coefficient: 1000
        var_name: x10
      - coefficient: 1000
        var_name: x12
      - coefficient: 1000
        var_name: x14
    name: obj
problem_name: ClpDefaultName
problem_sense: Minimize
variables:
  x0:
    Bounded:
      - 0
      - 21.1
      - false
  x1: General
  x10: General
  x11: General
  x12: General
  x13: General
  x14: General
  x2:
    Bounded:
      - 0
      - 22.2
      - false
  x3: General
  x4:
    Bounded:
      - 0
      - 23.3
      - false
  x5: General
  x6:
    Bounded:
      - 0
      - 11.1
      - false
  x7:
    Bounded:
      - 0
      - 12.2
      - false
  x8:
    Bounded:
      - 0
      - 13.3
      - false
  x9: General
